<?xml version="1.0" encoding="utf-8"?>
<com.chauthai.swipereveallayout.SwipeRevealLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/slTableItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:mode="same_level"
    app:dragEdge="right"
    >

    <!-- Swipe layout here -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/edit_icon"
            android:drawablePadding="@dimen/tvEdit_drawablePadding"
            android:padding="@dimen/tvEdit_padding"
            android:textColor="@color/white"
            android:background="@color/warning"
            android:text="@string/tvEdit_text"
            android:textSize="@dimen/tvEdit_textSize"
            android:gravity="center_vertical"
            />

        <TextView
            android:id="@+id/tvDel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/trash_icon"
            android:drawablePadding="@dimen/tvDel_drawablePadding"
            android:padding="@dimen/tvDel_padding"
            android:background="@color/error"
            android:textColor="@color/white"
            android:text="@string/tvDel_text"
            android:textSize="@dimen/tvDel_textSize"
            android:gravity="center_vertical"
            />
    </LinearLayout>

    <!-- Main layout here -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tableItem_tvName_text"
            android:textSize="@dimen/tableItem_tvName_textSize"
            android:padding="@dimen/tableItem_tvName_padding"
            android:background="@color/white"
            />
    </LinearLayout>

</com.chauthai.swipereveallayout.SwipeRevealLayout>